/** @page CHANGES

@section 2.0.0-dev Changes with libapreq-2.0.0-dev

- July 18, 2003 - C bugfix: apreq_decode [Graham Clark]

If the source and destination strings are represented by the same
pointer - e.g. if called as apreq_unescape(s) - string s is modified
incorrectly in general.  Patch includes new unit test.


- July 16, 2003 - Perl API [joes]

Added $req->parse, $req->status, & "preparse" logic 
to $req->param & $req->upload.

- July 16, 2003 - C API [joes]

Added "preparse" logic to apreq_params & apreq_uploads
to bring behavior in line with libapreq-1.x.

- July 15, 2003 - C API [joes]

Dropped param->charset.
Make apreq_brigade_concat public, so mod_apreq can use it
for its ctx->spool brigade.

- July 14, 2003 - Documentation [joes]

Updated Cookie_pod to reflect API changes over v1.X.

- June 30, 2003 - Documentation [joes]

Added doxygen links to Apache::Request and Apache::Cookie 
perl docs.

- June 30, 2003 - C API [joes]

Added apreq_copy_brigade(bb) to apreq.h.

- June 27, 2003 - C API [joes]

The new filter-based design required a complete 
departure from libapreq-1.X codebase. libapreq-2
is based solely on APR, and to be fully functional, 
requires a supporting environment similar to Apache-2.
A person wishing to port libapreq-2 to a new environment
needs to provide definitions for the declarations in apreq_env.h.

- June 27, 2003 - Perl API [joes]

Aggregates are always collected into an APR::Table-based package.
New table packages: Apache::Cookie::Table, Apache::Request::Table,
and Apache::Upload::Table.

- June 27, 2003 - Perl API [joes]

Apache::Cookie->fetch now requires an "environment" argument ($r).
Its return value is blessed into the Apache::Cookie::Jar class.

- June 27, 2003 - Perl API [joes]

Two new request lookup functions:
  -# $req->args - param lookup using only the query string
  -# $req->body - param lookup using only the POST data


**/